# neuron_engine

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml
cfi/neuron/: cfg.hpp.in
example/: CMakeLists.txt  example
example/src/: main.cpp
libs/neuron/: CMakeLists.txt
libs/neuron/src/neuron/: neuron.cpp  neuron.hpp  pre.hpp
libs/occipital/: CMakeLists.txt
libs/occipital/src/neuron/occipital/: device_context.cpp  device_context.hpp  occipital.cpp  occipital.hpp  pre.hpp
libs/stem/: CMakeLists.txt
libs/stem/src/neuron/stem/: interfaces.hpp  pre.hpp  stem.cpp  stem.hpp  utils.hpp
libs/synapse/: CMakeLists.txt
libs/synapse/src/neuron/synapse/: cocoas.mm  generic.cpp  generic.hpp  synapse.cpp  synapse.hpp  win32.cpp  win32.hpp
neuron_editor/: Cargo.toml  README.md
neuron_editor/src/: main.rs
neuron_editor/src/project/: Cargo-template.toml  buildsystem.rs  generate.rs  manifest.rs  mod.rs
neuron_editor/template/: Cargo-template.toml  script_main.rs
neuron_runtime/: Cargo.toml  README.md
neuron_runtime/src/: main.rs
neuron_script_api/: Cargo.toml  README.md
neuron_script_api/src/: backend.rs  bookkeeping.rs  lib.rs
src/: lib.rs
src/app/: config.rs  mod.rs  state.rs  window.rs
src/neuron/platform/: cocoas.cpp  cocoas.hpp  cocoas.mm  generic.cpp  macos.cpp  macos.hpp  macos.mm  win32.cpp
src/package/: mod.rs
